<resources>
    <string name="app_name">MediSync</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Splash</string>
    <string name="login">login</string>
    <string name="appName">MediSync</string>
    <string name="search_patient_by_phone_number">Search patient by phone number</string>
    <string name="settings">Settings</string>
    <string name="patients">Patients</string>
    <string name="prescription">prescription</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="save_as_image">Save as Image</string>
    <string name="you_have_18_appointments_today">You have 18 appointments today.</string>
    <string name="verifyemail">verifyEmail</string>
</resources>