<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_splash">

    <action
        android:id="@+id/action_global_navigation_welcome"
        app:destination="@id/navigation_welcome"
        app:launchSingleTop="true"
        app:popUpTo="@id/navigation_splash"
        app:popUpToInclusive="false" />


    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.example.newmedisync.ui.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_navigation_splash_to_navigation_welcome"
            app:destination="@id/navigation_welcome"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_adminHome"
            app:destination="@id/navigation_adminHome"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_patientHome"
            app:destination="@id/navigation_patientHome"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_completePatientProfile"
            app:destination="@id/navigation_completePatientProfile"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.example.newmedisync.ui.welcome.WelcomeFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_navigation_welcome_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_welcome_to_navigation_signup"
            app:destination="@id/navigation_signup" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.newmedisync.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/navigateLogin_to_verify"
            app:destination="@id/navigation_verifyEmail" />
        <action
            android:id="@+id/action_navigation_login_to_adminHomeFragment"
            app:destination="@id/navigation_adminHome"/>
        <action
            android:id="@+id/action_navigation_login_to_patientHomeFragment"
            app:destination="@id/navigation_patientHome"/>
        <action
            android:id="@+id/action_navigation_login_to_completePatientProfileFragment"
            app:destination="@id/navigation_completePatientProfile"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.example.newmedisync.ui.signup.SignupFragment"
        android:label="Signup"
        tools:layout="@layout/fragment_signup" >
        <action
            android:id="@+id/action_navigation_signup_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_signup_to_verifyEmailFragment"
            app:destination="@id/navigation_verifyEmail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.newmedisync.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
            <action
                android:id="@+id/action_navigation_home_to_navigation_patients_prescription"
                app:destination="@id/navigation_prescription" />
            <action
                android:id="@+id/action_navigation_home_to_navigation_Add_patients"
                app:destination="@id/navigation_addPatients" />
        <action
                android:id="@+id/action_navigation_home_to_navigation_patient"
                app:destination="@id/navigation_patients" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_doctorVerification"
            app:destination="@id/navigation_doctorVerify" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.newmedisync.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_patients"
        android:name="com.example.newmedisync.ui.patients.PatientsFragment"
        android:label="@string/patients"
        tools:layout="@layout/fragment_patients" >
        <action
            android:id="@+id/action_navigation_patients_to_navigation_addPatients"
            app:destination="@id/navigation_addPatients" />
        <action
            android:id="@+id/action_navigation_patients_to_navigation_patientProfile"
            app:destination="@id/navigation_patientProfile" />

    </fragment>

    <fragment
        android:id="@+id/navigation_prescription"
        android:name="com.example.newmedisync.ui.prescription.PrescriptionBoardFragment"
        android:label="@string/prescription"
        tools:layout="@layout/fragment_prescription" />
    <fragment
        android:id="@+id/navigation_verifyEmail"
        android:name="com.example.newmedisync.ui.verifyEmail.VerifyEmailFragment"
        android:label="@string/verifyemail"
        tools:layout="@layout/fragment_verify_email" />
 <fragment
        android:id="@+id/navigation_addPatients"
        android:name="com.example.newmedisync.ui.addPatients.AddPatientsFragment"
        android:label="Add Patients"
        tools:layout="@layout/fragment_add_patients" >
        <action
            android:id="@+id/action_addPatientsFragment_to_navigation_patients"
            app:destination="@id/navigation_patients" />
 </fragment>
 <fragment
        android:id="@+id/navigation_patientProfile"
        android:name="com.example.newmedisync.ui.patientProfile.PatientProfileFragment"
        android:label="@string/patient_profile"
        tools:layout="@layout/fragment_patient_profile" >
     <action
         android:id="@+id/action_patientProfileFragment_to_navigation_prescription"
         app:destination="@id/navigation_prescription" />
 </fragment>
    <fragment
        android:id="@+id/navigation_adminHome"
        android:name="com.example.newmedisync.ui.admin.AdminHomeFragment"
        android:label="AdminHome"
        tools:layout="@layout/fragment_admin_home" >
        <action
            android:id="@+id/action_adminHomeFragment_to_doctorVerificationDetailsFragment"
            app:destination="@id/navigation_doctorVerifyDetails" />


 </fragment>
    <fragment
        android:id="@+id/navigation_doctorVerify"
        android:name="com.example.newmedisync.ui.docVerify.DoctorVerificationFragment"
        android:label="Doctor Verify"
        tools:layout="@layout/fragment_doctor_verification" >

 </fragment>
    <fragment
        android:id="@+id/navigation_patientHome"
        android:name="com.example.newmedisync.ui.patient.PatientHomeFragment"
        android:label="Patient Home"
        tools:layout="@layout/fragment_patient_home" >
        <action
            android:id="@+id/action_patientHomeFragment_to_reportsFragment"
            app:destination="@id/navigation_reports" />
    </fragment>
    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.newmedisync.ui.patient.ReportsFragment"
        android:label="Reports"
        tools:layout="@layout/fragment_reports" />
    <fragment
        android:id="@+id/navigation_reportScanner"
        android:name="com.example.newmedisync.ui.patient.ReportScannerFragment"
        android:label="Scan Report"
        tools:layout="@layout/fragment_report_scanner" />
    <fragment
        android:id="@+id/navigation_visits"
        android:name="com.example.newmedisync.ui.patient.VisitsFragment"
        android:label="Visits"
        tools:layout="@layout/fragment_visits" />
    <fragment
        android:id="@+id/navigation_completePatientProfile"
        android:name="com.example.newmedisync.ui.completepatient.CompletePatientProfileFragment"
        android:label="Complete Patient Profile"
        tools:layout="@layout/fragment_complete_patient_profile" >
        <action
            android:id="@+id/action_completePatientProfileFragment_to_patientHomeFragment"
            app:destination="@id/navigation_patientHome" />
 </fragment>
    <fragment
        android:id="@+id/navigation_doctorVerifyDetails"
        android:name="com.example.newmedisync.ui.admin.DoctorVerificationDetailsFragment"
        android:label="Doctor Verify Details"
        tools:layout="@layout/fragment_doctor_verification_details" >
        <argument
            android:name="doctorUid"
            app:argType="string" />
 </fragment>

</navigation>