<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <!-- TOP BAR -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:background="@drawable/bg_quickaction_medi"
                        android:padding="5dp"
                        android:src="@drawable/people" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="MediTrack"
                        android:textColor="#0A70A2"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:src="@drawable/bell"
                    android:padding="@dimen/_10dp"/>

            </LinearLayout>

            <!-- TITLE -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="REGISTRY"
                android:textColor="#7FA9C3"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add New Patient"
                android:textColor="#222222"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Enter patient details to create a medical profile."
                android:textColor="#888888"
                android:textSize="14sp" />

            <!-- FORM CARD -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <!-- FULL NAME -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FULL NAME"
                        android:textColor="#888888"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="#F7F7F7"
                        app:cardCornerRadius="14dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="14dp">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/people"
                                app:tint="#9A9A9A" />

                            <EditText
                                android:id="@+id/etName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:background="@android:color/transparent"
                                android:hint="@string/enter_your_full_name"
                                android:textColor="#222222"
                                android:textSize="12sp"
                                android:textColorHint="#BDBDBD" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <!-- PHONE -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="PHONE NUMBER"
                        android:textColor="#888888"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="#F7F7F7"
                        app:cardCornerRadius="14dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="14dp">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/phone"
                                app:tint="#9A9A9A" />

                            <EditText
                                android:id="@+id/etPhone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:background="@android:color/transparent"
                                android:hint="@string/enter_your_phone_number"
                                android:inputType="phone"
                                android:textColor="#222222"
                                android:textSize="12sp"                                android:textColorHint="#BDBDBD" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <!-- AGE -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="AGE"
                        android:textColor="#888888"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="#F7F7F7"
                        app:cardCornerRadius="14dp">

                        <EditText
                            android:id="@+id/etAge"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_age"
                            android:inputType="number"
                            android:paddingHorizontal="16dp"
                            android:textColor="#222222"
                            android:textSize="12sp"
                            android:textColorHint="#BDBDBD" />

                    </androidx.cardview.widget.CardView>

                    <!-- GENDER -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="GENDER"
                        android:textColor="#888888"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/genderGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:textColor="#444444" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:text="Female"
                            android:textColor="#444444" />

                        <RadioButton
                            android:id="@+id/rbOther"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:text="Other"
                            android:textColor="#444444" />

                    </RadioGroup>

                    <!-- BLOOD GROUP -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="BLOOD GROUP"
                        android:textColor="#888888"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spBloodGroup"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_spinner"
                        android:paddingHorizontal="10dp"
                        android:popupBackground="#FFFFFF"/>

                    <!-- ADDRESS -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="ADDRESS"
                        android:textColor="#888888"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="#F7F7F7"
                        app:cardCornerRadius="14dp">

                        <EditText
                            android:id="@+id/etAddress"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="top"
                            android:textSize="12sp"
                            android:hint="Enter patient address..."
                            android:padding="16dp"
                            android:textColor="#222222"
                            android:textColorHint="#BDBDBD" />

                    </androidx.cardview.widget.CardView>

                    <!-- MEDICAL NOTES -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="MEDICAL NOTES"
                        android:textColor="#888888"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="#F7F7F7"
                        app:cardCornerRadius="14dp">

                        <EditText
                            android:id="@+id/etMedicalNotes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="top"
                            android:hint="Allergies, conditions, ongoing medication..."
                            android:padding="16dp"
                            android:textSize="12sp"
                            android:textColor="#222222"
                            android:textColorHint="#BDBDBD" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- SAVE BUTTON -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnSavePatient"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_signin_gradient"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/save"
                        app:tint="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="Save Patient"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>